--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <section class="inicio">
                 <div class="texto-inicial">
                     <h2>Adote um Amigo</h2>
-                    <p><strong>Adote um amigo fiel!</strong> Este site tem como objetivo mostrar a você a alegria de ter um pet em casa. Explore as fotos e informações sobre cães e gatos disponíveis para adoção. Lebre-se que esse site é somente ilustrativo, caso fique interresado em adotar um amigo <a href="https://www.amorempatas.com/adote" target="_blank">clique aqui!</a>
+                    <p><strong>Adote um amigo fiel!</strong> Este site tem como objetivo mostrar a você a alegria de ter um pet em casa. Explore as fotos e informações sobre cães e gatos disponíveis para adoção. Lembre-se que esse site é somente ilustrativo, caso fique interressado em adotar um amigo <a href="https://www.google.com/search?q=adote+um+pet&oq=adote+um+pet&gs_lcrp=EgZjaHJvbWUyCQgAEEUYORiABDIHCAEQABiABDIQCAIQLhivARjHARiABBiOBTIHCAMQABiABDIHCAQQABiABDIGCAUQRRg8MgYIBhBFGDwyBggHEEUYPNIBCDMzMjJqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8" target="_blank">clique aqui!</a>
                 </div>
             </section>
     </main>
